--- a/TCT.FitApp/TCT.FitApp.BL/TCT.FitApp.BL.csproj
+++ b/TCT.FitApp/TCT.FitApp.BL/TCT.FitApp.BL.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TCT.FitApp.BL.Models\TCT.FitApp.BL.Models.csproj" />
+    <ProjectReference Include="..\TCT.FitApp.PL\TCT.FitApp.PL.csproj" />
+  </ItemGroup>
+
 </Project>
