WPF MainWindow designed, grid populates correctly, user and usermanager updated

--- a/TCT.FitApp/TCT.FitApp.WPF/TCT.FitApp.WPF.csproj
+++ b/TCT.FitApp/TCT.FitApp.WPF/TCT.FitApp.WPF.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TCT.FitApp.BL.Models\TCT.FitApp.BL.Models.csproj" />
+    <ProjectReference Include="..\TCT.FitApp.BL\TCT.FitApp.BL.csproj" />
   </ItemGroup>
 
 </Project>
