--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
@@ -31,5 +31,8 @@
     <EmbeddedResource Update="Pages\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\RegisterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
