Added LoadByUserIdAndDate method in DayManager, updated API and customized the homepage in mobile app.

--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <UserSecretsId>6198ea00-4f39-4d3f-a41c-44fcd5f95346</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -22,6 +23,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms.CircularProgressBar" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
