Added Reporting project

--- a/TCT.FitApp/Nutritionix/Nutritionix.csproj
+++ b/TCT.FitApp/Nutritionix/Nutritionix.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TCT.Utilities.Reporting\TCT.Utilities.Reporting.csproj" />
+  </ItemGroup>
+
 </Project>
