Setup Dabatase logging in the API Project.

--- a/TCT.FitApp/TCT.FitApp.API/appsettings.json
+++ b/TCT.FitApp/TCT.FitApp.API/appsettings.json
@@ -1,4 +1,17 @@
 {
+  "Serilog": {
+    "MinimumLevel": "Warning",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=10.0.0.10;Database=TCT.FitApp.DB;Integrated Security=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,3 +21,4 @@
   },
   "AllowedHosts": "*"
 }
+
