--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="Forms9Patch" Version="2.4.9" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
