--- a/TCT.FitApp/TCT.FitApp.WPF/TCT.FitApp.WPF.csproj
+++ b/TCT.FitApp/TCT.FitApp.WPF/TCT.FitApp.WPF.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TCT.FitApp.BL.Models\TCT.FitApp.BL.Models.csproj" />
     <ProjectReference Include="..\TCT.FitApp.BL\TCT.FitApp.BL.csproj" />
     <ProjectReference Include="..\TCT.Utilities.Reporting\TCT.Utilities.Reporting.csproj" />
