--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/TCT.FitApp.Mobile.csproj
@@ -30,6 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Pages\DayItemPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
