--- a/TCT.FitApp/TCT.FitApp.API/appsettings.json
+++ b/TCT.FitApp/TCT.FitApp.API/appsettings.json
@@ -5,7 +5,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=10.0.0.10;Database=TCT.FitApp.DB;Integrated Security=True",
+          "connectionString": "Server=75.87.201.230;Database=TCT.FitApp.DB;User Id=SA;Password=teamc",
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
